@@ -2,6 +2,13 @@ New in spot 2.8.6.dev (not yet released)
 
   Nothing yet.
 
+  Bugs fixed:
+
+  - Building a product between two complete automata where one operand
+    had false acceptance could create a incomplete automaton
+    incorrectly tagged as complete, causing the print_hoa() function
+    to raise an exception.
+
 New in spot 2.8.6 (2020-02-19)
 
   Bugs fixed:
